# atlas-worker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.runpod/: hub.json  tests.json
infra/docker/: Dockerfile
infra/runpod/: handler.py
intelligence/src/domains/: base.py  farm.py  mine.py  registry.py
schemas/: jobs.py
scripts/: run_pipeline.py  run_pipeline.sh
sdk/atlas_sdk/: __init__.py  base.py  logging.py  storage.py
test_data/: test_input.json
workers/auto_label/src/: auto_label_worker.py
workers/colmap/src/: worker.py
workers/frame_extraction/src/: worker.py
workers/splat/src/: worker.py
